# aviutl-plugin-rs

./: Cargo.toml  README.md
aviutl-plugin-sys/: Cargo.toml
aviutl-plugin-sys/src/: color.rs  filter.rs  input.rs  lib.rs  output.rs
examples/: audio_filter.rs  avi_input.rs  bmp_output.rs  disp_filter.rs  edit_filter.rs  interlace_filter.rs  loupe_filter.rs  multi_thread_filter.rs  video_filter.rs  yuy2_color.rs
src/: color.rs  filter.rs  input.rs  lib.rs  output.rs
src/filter/: api.rs  avi_file.rs  editing.rs  file_info.rs  frame_status.rs  sys_info.rs  window_message.rs
